DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2004-03-05 patrich     Changed the default omniORB version tested for by
                       configure to omniORB4.
2003-12-08 patrickh    Initial support for using Fnorb or PyORBit 2 as
                       alternatives to omniORBpy.  This work is not yet done.
2003-11-07 patrickh    The editor for the global preferences of the Java GUI
                       now saves the correct value for the user's preferred
                       starting directory for file choosers.
                       NEW VERSION: 0.16.2
2003-11-07 patrickh    org.vrjuggler.tweek.net.corba.CorbaService.init() now
                       passes all CORBA-related exceptions through to the
                       caller.
                       NEW VERSION: 0.16.1
2003-09-19 patrickh    Removed the Emacs/Windows file chooesr open style
                       preference.  Changed the semantics of
                       GlobalPreferencesService.getChooserStartDir() to return
                       a path instead of a symbolic string.
                       NEW VERSION: 0.16.0
2003-08-25 aronb       Added a BeanStatus dialog box that shows all loaded beans
                       and beans that are waiting for dependancies. It also
                       shows details such as JAR URL, Class Name, and deps.
2003-08-23 patrickh    Added the JGoodies Looks Swing look and feel.
2003-08-16 patrickh    Refactored the built-in Tweek Service Beans to be
                       accessed via proxies.  This makes acquisition of the
                       service reference dramatically simpler.
                       NEW VERSION: 0.15.0
2003-08-12 patrickh    The method getBean() in the class
                       org.vrjuggler.tweek.beans.BeanInstantiationEvent is now
                       getTweekBean().
                       NEW VERSION: 0.14.0